fix: drawer visible

--- a/src/components/Discuss/index.less
+++ b/src/components/Discuss/index.less
@@ -1,6 +1,6 @@
 /* stylelint-disable selector-class-pattern */
 #discuss {
-  font-family: Lato, 'PingFang SC', 'Microsoft YaHei', sans-serif;
+  font-family: Lato, "PingFang SC", "Microsoft YaHei", sans-serif;
 
   .discuss-header {
     padding: 20px 0;
