--- a/src/layout/web/index.less
+++ b/src/layout/web/index.less
@@ -34,7 +34,6 @@
     .app-article,
     .app-tags,
     .app-archives {
-      padding-top: 20px;
       padding-bottom: 0;
     }
 
